Added endpoints for manage profile data
