# internal/api/schemas/profile.go
@@ -1,0 +1,6 @@
+package schemas
+
+type ProfileUpdate struct {
+	FirstName string `json:"firstName" validate:"required"`
+	LastName  string `json:"lastName" validate:"required"`
+}
